--- a/about.html
+++ b/about.html
@@ -17,10 +17,20 @@
   </header>
   <main>
     <h1>About Peterson’s Robotics & Innovation</h1>
-    <p>Founded by Naethaniel Peterson in 2024, we specialize in modular robotics with a focus on sustainability and real-world impact.</p>
+    <p>Founded in 2024 by Naethaniel “Nate” Peterson in Salt Lake City, our company began as a solo experiment: 3D-printing shoreline barriers from local sand and shell using an Ender-3 v3 and custom extruder. Early success validated the concept of leveraging in-situ materials for rapid environmental protection. From that spark, Project Evo was born.</p>
+    <h2>Our Mission & Approach</h2>
+    <p>We deliver modular, open-source robotics platforms combining renewable energy—solar, wind, and battery—with 3D printing of local aggregates. Each design choice prioritizes sustainability, resilience, and field reparability. All schematics, firmware, and documentation are published under permissive licenses to foster global collaboration.</p>
+    <h2>Core Values</h2>
+    <ul>
+      <li><strong>Integrity:</strong> Transparent reporting and ethical engineering.</li>
+      <li><strong>Sustainability:</strong> Renewable materials and minimal ecological impact.</li>
+      <li><strong>Inclusivity:</strong> Open-source ethos and community workshops.</li>
+      <li><strong>Adaptability:</strong> Modular hardware/software for rapid field reconfiguration.</li>
+      <li><strong>Innovation:</strong> Bold experimentation and long-term vision.</li>
+    </ul>
   </main>
   <footer>
-    <p>&copy; 2025 Peterson’s Robotics & Innovation. All rights reserved.</p>
+    <p>&copy; 2025 Peterson’s Robotics & Innovation</p>
   </footer>
 </body>
 </html>
