--- a/projects.html
+++ b/projects.html
@@ -16,11 +16,17 @@
     </nav>
   </header>
   <main>
-    <h1>Project Evo Platform</h1>
-    <p>Project Evo comprises five modular units optimized for diverse environments: SpyderV1, Oracle, Indigo, Land Sharks, and Harsh-Terrain Builder.</p>
+    <h1>Project Evo Modules</h1>
+    <ul>
+      <li><a href="spyderV1.html">SpyderV1 Recon Rover</a></li>
+      <li><a href="oracle.html">Oracle Power & Logistics Hub</a></li>
+      <li><a href="indigo.html">Indigo Sea Vessel</a></li>
+      <li><a href="landSharks.html">Land Sharks Amphibious Crawler</a></li>
+      <li><a href="builderRobot.html">Harsh-Terrain Builder Robot</a></li>
+    </ul>
   </main>
   <footer>
-    <p>&copy; 2025 Peterson’s Robotics & Innovation. All rights reserved.</p>
+    <p>&copy; 2025 Peterson’s Robotics & Innovation</p>
   </footer>
 </body>
 </html>
