--- a/supportTheProjectV1.html
+++ b/supportTheProjectV1.html
@@ -16,12 +16,22 @@
     </nav>
   </header>
   <main>
-    <h1>Support Our Work</h1>
-    <p>Your contributions enable prototype development, field trials, and open-source dissemination.</p>
-    <p><a href="https://www.gofundme.com/f/fuel-the-future-help-build-spider-v1" class="button">Donate Now</a></p>
+    <h1>Support Our Mission</h1>
+    <p>Your contributions drive prototype development, field deployments, and open-source releases. We reinvest 100% of proceeds into:</p>
+    <ul>
+      <li>High-torque servos & pressure-tolerant components</li>
+      <li>Sonar, LIDAR & hydrographic sensor systems</li>
+      <li>Vessel charters & travel logistics</li>
+      <li>Educational workshops & community events</li>
+      <li>R&D for new modules & autonomy improvements</li>
+    </ul>
+    <p style="text-align:center; margin:2em 0;">
+      <a href="https://www.gofundme.com/f/fuel-the-future-help-build-spider-v1" class="button">Fuel the Future on GoFundMe</a>
+    </p>
+    <p>Thank you for partnering with us to advance resilient, sustainable robotics.</p>
   </main>
   <footer>
-    <p>&copy; 2025 Peterson’s Robotics & Innovation. All rights reserved.</p>
+    <p>&copy; 2025 Peterson’s Robotics & Innovation</p>
   </footer>
 </body>
 </html>
