--- a/index.html
+++ b/index.html
@@ -16,11 +16,31 @@
     </nav>
   </header>
   <main>
-    <h1>Leading Sustainable Automation for Extreme Environments</h1>
-    <p>At Peterson’s Robotics & Innovation, we design modular robotics platforms for land, sea, and remote operations. Our solutions combine robust engineering with sustainable energy systems.</p>
+    <section id="hero">
+      <h1>Modular Robotics for Extreme Environments</h1>
+      <p>We build open-source robotic platforms powered by solar, wind, and battery— from six-legged rovers to amphibious crawlers to autonomous sea vessels.</p>
+      <p><a href="projects.html">Explore Project Evo →</a></p>
+    </section>
+    <section id="cards">
+      <div class="card">
+        <h2>Our Story</h2>
+        <p>From a garage prototype to a versatile multi-robot ecosystem.</p>
+        <a href="about.html">Learn more</a>
+      </div>
+      <div class="card">
+        <h2>Project Evo</h2>
+        <p>Five interoperable modules tackling land, sea, and construction challenges.</p>
+        <a href="projects.html">View modules</a>
+      </div>
+      <div class="card">
+        <h2>Support Us</h2>
+        <p>Fuel our next field trials and open-source releases.</p>
+        <a href="supportTheProjectV1.html">Get involved</a>
+      </div>
+    </section>
   </main>
   <footer>
-    <p>&copy; 2025 Peterson’s Robotics & Innovation. All rights reserved.</p>
+    <p>&copy; 2025 Peterson’s Robotics & Innovation</p>
   </footer>
 </body>
 </html>
