--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.v1.png" alt="Logo" class="logo">
+    <img src="images/logoCompany.png" alt="Logo" class="logo">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html" class="active">About Us</a>
@@ -16,18 +16,19 @@
     </nav>
   </header>
   <main>
-    <h1>About Peterson’s Robotics & Innovation</h1>
-    <p>Founded in 2024 by Naethaniel “Nate” Peterson in Salt Lake City, our company began as a solo experiment: 3D-printing shoreline barriers from local sand and shell using an Ender-3 v3 and custom extruder. Early success validated the concept of leveraging in-situ materials for rapid environmental protection. From that spark, Project Evo was born.</p>
-    <h2>Our Mission & Approach</h2>
-    <p>We deliver modular, open-source robotics platforms combining renewable energy—solar, wind, and battery—with 3D printing of local aggregates. Each design choice prioritizes sustainability, resilience, and field reparability. All schematics, firmware, and documentation are published under permissive licenses to foster global collaboration.</p>
-    <h2>Core Values</h2>
-    <ul>
-      <li><strong>Integrity:</strong> Transparent reporting and ethical engineering.</li>
-      <li><strong>Sustainability:</strong> Renewable materials and minimal ecological impact.</li>
-      <li><strong>Inclusivity:</strong> Open-source ethos and community workshops.</li>
-      <li><strong>Adaptability:</strong> Modular hardware/software for rapid field reconfiguration.</li>
-      <li><strong>Innovation:</strong> Bold experimentation and long-term vision.</li>
-    </ul>
+    <h1>About Us</h1>
+    <section>
+      <h2>Our Origin</h2>
+      <p>Founded in 2024 by Naethaniel “Nate” Peterson, we began by prototyping a 3D-printed shoreline barrier in a Salt Lake City workshop. This success sparked the creation of Project Evo: a cohesive suite of modular robots.</p>
+    </section>
+    <section>
+      <h2>Mission & Values</h2>
+      <p>We combine renewable energy, open-source design, and sustainable materials to build adaptable robotic platforms. Our core values—Integrity, Sustainability, Inclusivity, Adaptability, Innovation—guide every project.</p>
+    </section>
+    <section>
+      <h2>Community Engagement</h2>
+      <p>We host annual workshops, “Bot Beach Day,” and collaborate with universities and NGOs to validate our systems in real-world conditions, from deserts to coral reefs.</p>
+    </section>
   </main>
   <footer>
     <p>&copy; 2025 Peterson’s Robotics & Innovation</p>
