--- a/indigo.html
+++ b/indigo.html
@@ -1,15 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head><meta charset="UTF-8"><title>Indigo Sea Vessel</title><link rel="stylesheet" href="css/style.css"></head><body>
-<header><img src="images/logo.v1.png" alt="Logo" class="logo"><nav><a href="projects.html">Back to Projects</a></nav></header>
-<main>
-<h1>Indigo Sea Vessel</h1>
-<p>Indigo is a 6m solar-wind hybrid catamaran rated to 100m depth operations. Equipped with multibeam sonar and hydrophones, it performs bathymetric surveys while acting as a relay for submerged modules.</p>
-<h2>Goals</h2>
-<ul>
-<li>Conduct high-resolution seafloor mapping with <1m resolution.</li>
-<li>Sustain 14-day autonomous deployments using renewable energy.</li>
-<li>Launch and recover underwater submodules for targeted inspections.</li>
-<li>Provide a mobile command center and data hub at sea.</li>
-</ul>
-</main><footer><p>&copy; 2025 Peterson’s Robotics & Innovation</p></footer></body></html>
+<html lang="en"><head><meta charset="UTF-8"><title>Indigo Sea Vessel</title><link rel="stylesheet" href="css/style.css"></head><body>
+<header><img src="images/logoCompany.png" alt="Logo" class="logo"><nav><a href="projects.html">Back to Projects</a></nav></header>
+<main><h1>Indigo Sea Vessel</h1><p>Solar-wind hybrid catamaran rated to 100m, multibeam sonar, hydrophones, data relay for submodules.</p><h2>Goals</h2><ul><li><1m seafloor mapping</li><li>14-day autonomous deployment</li><li>Submodule launch/recovery</li><li>Mobile command center</li></ul></main><footer><p>&copy; 2025 Peterson’s Robotics & Innovation</p></footer></body></html>
