--- a/oracle.html
+++ b/oracle.html
@@ -1,15 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head><meta charset="UTF-8"><title>Oracle Power & Logistics Hub</title><link rel="stylesheet" href="css/style.css"></head><body>
-<header><img src="images/logo.v1.png" alt="Logo" class="logo"><nav><a href="projects.html">Back to Projects</a></nav></header>
-<main>
-<h1>Oracle Power & Logistics Hub</h1>
-<p>Oracle features a 10 kWh battery bank, wireless charging pads, and dock interfaces. Its heavy-duty chassis hauls up to 100 kg of supplies or sample loads, enabling continuous operation of adjacent modules.</p>
-<h2>Goals</h2>
-<ul>
-<li>Enable 48-hour continuous field operations via dynamic power routing.</li>
-<li>Transport tools, batteries, and collected samples across distances up to 5 km.</li>
-<li>Interface with solar arrays and wind turbines for recharging.</li>
-<li>Facilitate mesh-network data relays between modules.</li>
-</ul>
-</main><footer><p>&copy; 2025 Peterson’s Robotics & Innovation</p></footer></body></html>
+<html lang="en"><head><meta charset="UTF-8"><title>Oracle Power & Logistics Hub</title><link rel="stylesheet" href="css/style.css"></head><body>
+<header><img src="images/logoCompany.png" alt="Logo" class="logo"><nav><a href="projects.html">Back to Projects</a></nav></header>
+<main><h1>Oracle Power & Logistics Hub</h1><p>10 kWh battery bank, wireless and docked charging, hauls up to 100 kg.</p><h2>Goals</h2><ul><li>48h continuous operation</li><li>5 km supply transport</li><li>Renewable recharging</li><li>Mesh-network relay</li></ul></main><footer><p>&copy; 2025 Peterson’s Robotics & Innovation</p></footer></body></html>
