--- a/supportTheProjectV1.html
+++ b/supportTheProjectV1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.v1.png" alt="Logo" class="logo">
+    <img src="images/logoCompany.png" alt="Logo" class="logo">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
@@ -17,18 +17,8 @@
   </header>
   <main>
     <h1>Support Our Mission</h1>
-    <p>Your contributions drive prototype development, field deployments, and open-source releases. We reinvest 100% of proceeds into:</p>
-    <ul>
-      <li>High-torque servos & pressure-tolerant components</li>
-      <li>Sonar, LIDAR & hydrographic sensor systems</li>
-      <li>Vessel charters & travel logistics</li>
-      <li>Educational workshops & community events</li>
-      <li>R&D for new modules & autonomy improvements</li>
-    </ul>
-    <p style="text-align:center; margin:2em 0;">
-      <a href="https://www.gofundme.com/f/fuel-the-future-help-build-spider-v1" class="button">Fuel the Future on GoFundMe</a>
-    </p>
-    <p>Thank you for partnering with us to advance resilient, sustainable robotics.</p>
+    <p>Your contributions enable prototype development, field testing, and open-source publication. 100% of funds are reinvested into R&D, community programs, and educational outreach.</p>
+    <a href="https://www.gofundme.com/f/fuel-the-future-help-build-spider-v1" class="button">Fuel the Future</a>
   </main>
   <footer>
     <p>&copy; 2025 Peterson’s Robotics & Innovation</p>
