--- a/builderRobot.html
+++ b/builderRobot.html
@@ -1,15 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head><meta charset="UTF-8"><title>Harsh-Terrain Builder Robot</title><link rel="stylesheet" href="css/style.css"></head><body>
-<header><img src="images/logo.v1.png" alt="Logo" class="logo"><nav><a href="projects.html">Back to Projects</a></nav></header>
-<main>
-<h1>Harsh-Terrain Builder Robot</h1>
-<p>This modular arm system accepts drill, welder, and extruder toolheads, constructing shelters from in-situ resources such as regolith, gravel, or soil mixed with binders.</p>
-<h2>Goals</h2>
-<ul>
-<li>Autonomously assemble a 3x3m shelter within 12 hours.</li>
-<li>Validate foldable printer modules for compact transport.</li>
-<li>Integrate wireless power and remote command capabilities.</li>
-<li>Demonstrate self-assembly on uneven, unprepared ground.</li>
-</ul>
-</main><footer><p>&copy; 2025 Peterson’s Robotics & Innovation</p></footer></body></html>
+<html lang="en"><head><meta charset="UTF-8"><title>Harsh-Terrain Builder Robot</title><link rel="stylesheet" href="css/style.css"></head><body>
+<header><img src="images/logoCompany.png" alt="Logo" class="logo"><nav><a href="projects.html">Back to Projects</a></nav></header>
+<main><h1>Harsh-Terrain Builder Robot</h1><p>Modular arm with drill, welder, extruder heads for on-site construction from in-situ materials.</p><h2>Goals</h2><ul><li>3x3m shelter in 12h</li><li>Foldable transport modules</li><li>Wireless power integration</li><li>Uneven ground assembly</li></ul></main><footer><p>&copy; 2025 Peterson’s Robotics & Innovation</p></footer></body></html>
