--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.v1.png" alt="Logo" class="logo">
+    <img src="images/logoCompany.png" alt="Logo" class="logo">
     <nav>
       <a href="index.html" class="active">Home</a>
       <a href="about.html">About Us</a>
@@ -18,23 +18,23 @@
   <main>
     <section id="hero">
       <h1>Modular Robotics for Extreme Environments</h1>
-      <p>We build open-source robotic platforms powered by solar, wind, and battery— from six-legged rovers to amphibious crawlers to autonomous sea vessels.</p>
-      <p><a href="projects.html">Explore Project Evo →</a></p>
+      <p>We deliver professional-grade, open-source robotics solutions powered by renewable energy—built to perform on land, at sea, and beyond.</p>
+      <a href="projects.html" class="button">Explore Project Evo</a>
     </section>
     <section id="cards">
       <div class="card">
         <h2>Our Story</h2>
-        <p>From a garage prototype to a versatile multi-robot ecosystem.</p>
+        <p>From a Salt Lake City garage to global field trials: our journey of innovation.</p>
         <a href="about.html">Learn more</a>
       </div>
       <div class="card">
         <h2>Project Evo</h2>
-        <p>Five interoperable modules tackling land, sea, and construction challenges.</p>
+        <p>Discover five interoperable modules designed for real-world application.</p>
         <a href="projects.html">View modules</a>
       </div>
       <div class="card">
         <h2>Support Us</h2>
-        <p>Fuel our next field trials and open-source releases.</p>
+        <p>Fuel our prototypes, field tests, and open-source releases.</p>
         <a href="supportTheProjectV1.html">Get involved</a>
       </div>
     </section>
