--- a/landSharks.html
+++ b/landSharks.html
@@ -1,15 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head><meta charset="UTF-8"><title>Land Sharks Amphibious Crawler</title><link rel="stylesheet" href="css/style.css"></head><body>
-<header><img src="images/logo.v1.png" alt="Logo" class="logo"><nav><a href="projects.html">Back to Projects</a></nav></header>
-<main>
-<h1>Land Sharks Amphibious Crawler</h1>
-<p>Land Sharks autonomously harvest local aggregates—sand, shell, minerals—and process them into a rapid-set cement. A precision 3D-print extruder then constructs shoreline barriers or temporary structures.</p>
-<h2>Goals</h2>
-<ul>
-<li>Print continuous barrier walls up to 1m height directly on-site.</li>
-<li>Utilize 80% in-situ materials to reduce supply logistics.</li>
-<li>Complete barrier construction at 0.5 m³/hour throughput.</li>
-<li>Test phased mobility upgrades for complex terrain navigation.</li>
-</ul>
-</main><footer><p>&copy; 2025 Peterson’s Robotics & Innovation</p></footer></body></html>
+<html lang="en"><head><meta charset="UTF-8"><title>Land Sharks Amphibious Crawler</title><link rel="stylesheet" href="css/style.css"></head><body>
+<header><img src="images/logoCompany.png" alt="Logo" class="logo"><nav><a href="projects.html">Back to Projects</a></nav></header>
+<main><h1>Land Sharks Amphibious Crawler</h1><p>Harvests in-situ aggregates to 3D-print rapid-set cement structures on-site.</p><h2>Goals</h2><ul><li>1m barrier height</li><li>80% local material usage</li><li>0.5 m³/hr throughput</li><li>Advanced terrain navigation</li></ul></main><footer><p>&copy; 2025 Peterson’s Robotics & Innovation</p></footer></body></html>
