--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.v1.png" alt="Logo" class="logo">
+    <img src="images/logoCompany.png" alt="Logo" class="logo">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
