--- a/spyderV1.html
+++ b/spyderV1.html
@@ -1,15 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head><meta charset="UTF-8"><title>SpyderV1 Recon Rover</title><link rel="stylesheet" href="css/style.css"></head><body>
-<header><img src="images/logo.v1.png" alt="Logo" class="logo"><nav><a href="projects.html">Back to Projects</a></nav></header>
-<main>
-<h1>SpyderV1 Recon Rover</h1>
-<p>SpyderV1 boasts six high-torque servos powering articulated legs, enabling traversal of rocky, sandy, and forested terrains. Integrated RGB, depth, and thermal sensors feed into an onboard Jetson Nano running ROS for autonomous mapping and obstacle avoidance.</p>
-<h2>Goals</h2>
-<ul>
-<li>Achieve sub-10 cm mapping accuracy in unstructured environments.</li>
-<li>Stream real-time multi-modal sensor data to remote operators.</li>
-<li>Support modular payloads (LiDAR, chemical sensors) for diverse missions.</li>
-<li>Maintain >8 hours of battery life under continuous operation.</li>
-</ul>
-</main><footer><p>&copy; 2025 Peterson’s Robotics & Innovation</p></footer></body></html>
+<html lang="en"><head><meta charset="UTF-8"><title>SpyderV1 Recon Rover</title><link rel="stylesheet" href="css/style.css"></head><body>
+<header><img src="images/logoCompany.png" alt="Logo" class="logo"><nav><a href="projects.html">Back to Projects</a></nav></header>
+<main><h1>SpyderV1 Recon Rover</h1><p>Six-legged rover with RGB, depth, and thermal cameras. Integrated ROS autonomy on Jetson Nano for mapping and navigation.</p><h2>Goals</h2><ul><li>High-resolution mapping in unstructured terrain</li><li>Real-time data streaming</li><li>Modular sensor payloads</li><li>>8-hour battery life</li></ul></main><footer><p>&copy; 2025 Peterson’s Robotics & Innovation</p></footer></body></html>
