--- a/index.html
+++ b/index.html
@@ -3,7 +3,118 @@
 <head>
   <meta charset="UTF-8">
   <title>Home | Peterson’s Robotics & Innovation</title>
-  <link rel="stylesheet" href="css/style.css">
+  <style>
+/* Global Styles */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background: #121212;
+  color: #e0e0e0;
+}
+a {
+  color: #00ff00;
+  text-decoration: none;
+}
+a:hover {
+  color: #6c2bd9;
+}
+
+/* Header */
+header {
+  background: #000;
+  display: flex;
+  align-items: center;
+  padding: 16px 32px;
+  border-bottom: 2px solid #00ff00;
+}
+header .logo {
+  height: 60px;
+}
+nav {
+  margin-left: auto;
+  display: flex;
+  gap: 32px;
+}
+nav a {
+  color: #e0e0e0;
+  font-weight: 500;
+}
+nav a.active {
+  color: #6c2bd9;
+}
+
+/* Main */
+main {
+  max-width: 1000px;
+  margin: 32px auto;
+  padding: 0 32px;
+}
+
+/* Hero */
+#hero {
+  text-align: center;
+  padding: 64px 0;
+}
+#hero h1 {
+  font-size: 2.5rem;
+  color: #6c2bd9;
+  margin-bottom: 16px;
+}
+#hero p {
+  font-size: 1.125rem;
+  margin-bottom: 24px;
+}
+.button {
+  background: #6c2bd9;
+  color: #fff;
+  padding: 12px 32px;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+/* Cards */
+#cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 32px;
+  margin-top: 32px;
+}
+.card {
+  background: #1e1e1e;
+  border: 1px solid #00ff00;
+  border-radius: 8px;
+  padding: 24px;
+  text-align: center;
+}
+.card h2 {
+  color: #6c2bd9;
+  margin-bottom: 16px;
+}
+.card p {
+  margin-bottom: 16px;
+}
+
+/* Sections */
+section {
+  margin-bottom: 48px;
+}
+h2 {
+  font-size: 1.75rem;
+  color: #6c2bd9;
+  margin-bottom: 16px;
+}
+
+/* Footer */
+footer {
+  background: #000;
+  text-align: center;
+  padding: 16px 0;
+  border-top: 1px solid #333;
+  color: #777;
+  font-size: 0.875rem;
+}
+</style>
 </head>
 <body>
   <header>
@@ -18,23 +129,23 @@
   <main>
     <section id="hero">
       <h1>Modular Robotics for Extreme Environments</h1>
-      <p>We deliver professional-grade, open-source robotics solutions powered by renewable energy—built to perform on land, at sea, and beyond.</p>
+      <p>We build open-source robotic platforms powered by solar, wind, and battery—from rovers to crawlers to sea vessels.</p>
       <a href="projects.html" class="button">Explore Project Evo</a>
     </section>
     <section id="cards">
       <div class="card">
         <h2>Our Story</h2>
-        <p>From a Salt Lake City garage to global field trials: our journey of innovation.</p>
+        <p>From a Salt Lake City garage to global field trials.</p>
         <a href="about.html">Learn more</a>
       </div>
       <div class="card">
         <h2>Project Evo</h2>
-        <p>Discover five interoperable modules designed for real-world application.</p>
+        <p>Five interoperable modules tackling land, sea, and construction.</p>
         <a href="projects.html">View modules</a>
       </div>
       <div class="card">
         <h2>Support Us</h2>
-        <p>Fuel our prototypes, field tests, and open-source releases.</p>
+        <p>Fuel our prototypes, field tests, and open-source efforts.</p>
         <a href="supportTheProjectV1.html">Get involved</a>
       </div>
     </section>
