--- a/about.html
+++ b/about.html
@@ -3,122 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>About Us | Peterson’s Robotics & Innovation</title>
-  <style>
-/* Global Styles */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background: #121212;
-  color: #e0e0e0;
-}
-a {
-  color: #00ff00;
-  text-decoration: none;
-}
-a:hover {
-  color: #6c2bd9;
-}
-
-/* Header */
-header {
-  background: #000;
-  display: flex;
-  align-items: center;
-  padding: 16px 32px;
-  border-bottom: 2px solid #00ff00;
-}
-header .logo {
-  height: 60px;
-}
-nav {
-  margin-left: auto;
-  display: flex;
-  gap: 32px;
-}
-nav a {
-  color: #e0e0e0;
-  font-weight: 500;
-}
-nav a.active {
-  color: #6c2bd9;
-}
-
-/* Main */
-main {
-  max-width: 1000px;
-  margin: 32px auto;
-  padding: 0 32px;
-}
-
-/* Hero */
-#hero {
-  text-align: center;
-  padding: 64px 0;
-}
-#hero h1 {
-  font-size: 2.5rem;
-  color: #6c2bd9;
-  margin-bottom: 16px;
-}
-#hero p {
-  font-size: 1.125rem;
-  margin-bottom: 24px;
-}
-.button {
-  background: #6c2bd9;
-  color: #fff;
-  padding: 12px 32px;
-  border-radius: 4px;
-  font-size: 1rem;
-}
-
-/* Cards */
-#cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 32px;
-  margin-top: 32px;
-}
-.card {
-  background: #1e1e1e;
-  border: 1px solid #00ff00;
-  border-radius: 8px;
-  padding: 24px;
-  text-align: center;
-}
-.card h2 {
-  color: #6c2bd9;
-  margin-bottom: 16px;
-}
-.card p {
-  margin-bottom: 16px;
-}
-
-/* Sections */
-section {
-  margin-bottom: 48px;
-}
-h2 {
-  font-size: 1.75rem;
-  color: #6c2bd9;
-  margin-bottom: 16px;
-}
-
-/* Footer */
-footer {
-  background: #000;
-  text-align: center;
-  padding: 16px 0;
-  border-top: 1px solid #333;
-  color: #777;
-  font-size: 0.875rem;
-}
-</style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
-    <img src="images/logoCompany.png" alt="Logo" class="logo">
+    <img src="images/logoCompany.png" alt="Company Logo" class="logo">
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html" class="active">About Us</a>
@@ -130,15 +19,15 @@ footer {
     <h1>About Us</h1>
     <section>
       <h2>Our Origin</h2>
-      <p>Founded in 2024 by Naethaniel “Nate” Peterson. We began by prototyping a 3D-printed shoreline barrier and evolved into Project Evo.</p>
+      <p>Founded in 2024 by Naethaniel “Nate” Peterson. We prototyped a 3D-printed shoreline barrier and evolved into Project Evo.</p>
     </section>
     <section>
       <h2>Mission & Values</h2>
-      <p>Modular, renewable robotics with open-source ethos. Values: Integrity, Sustainability, Inclusivity, Adaptability, Innovation.</p>
+      <p>Modular, renewable robotics with an open-source ethos. Values: Integrity, Sustainability, Inclusivity, Adaptability, Innovation.</p>
     </section>
     <section>
-      <h2>Community</h2>
-      <p>Workshops, Bot Beach Day, and partnerships with universities and NGOs for real-world trials.</p>
+      <h2>Community Engagement</h2>
+      <p>Workshops, “Bot Beach Day,” and partnerships for field validation in diverse environments.</p>
     </section>
   </main>
   <footer>
