--- a/oracle.html
+++ b/oracle.html
@@ -1,115 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="UTF-8"><title>Oracle Power & Logistics Hub</title><style>
-/* Global Styles */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background: #121212;
-  color: #e0e0e0;
-}
-a {
-  color: #00ff00;
-  text-decoration: none;
-}
-a:hover {
-  color: #6c2bd9;
-}
-
-/* Header */
-header {
-  background: #000;
-  display: flex;
-  align-items: center;
-  padding: 16px 32px;
-  border-bottom: 2px solid #00ff00;
-}
-header .logo {
-  height: 60px;
-}
-nav {
-  margin-left: auto;
-  display: flex;
-  gap: 32px;
-}
-nav a {
-  color: #e0e0e0;
-  font-weight: 500;
-}
-nav a.active {
-  color: #6c2bd9;
-}
-
-/* Main */
-main {
-  max-width: 1000px;
-  margin: 32px auto;
-  padding: 0 32px;
-}
-
-/* Hero */
-#hero {
-  text-align: center;
-  padding: 64px 0;
-}
-#hero h1 {
-  font-size: 2.5rem;
-  color: #6c2bd9;
-  margin-bottom: 16px;
-}
-#hero p {
-  font-size: 1.125rem;
-  margin-bottom: 24px;
-}
-.button {
-  background: #6c2bd9;
-  color: #fff;
-  padding: 12px 32px;
-  border-radius: 4px;
-  font-size: 1rem;
-}
-
-/* Cards */
-#cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 32px;
-  margin-top: 32px;
-}
-.card {
-  background: #1e1e1e;
-  border: 1px solid #00ff00;
-  border-radius: 8px;
-  padding: 24px;
-  text-align: center;
-}
-.card h2 {
-  color: #6c2bd9;
-  margin-bottom: 16px;
-}
-.card p {
-  margin-bottom: 16px;
-}
-
-/* Sections */
-section {
-  margin-bottom: 48px;
-}
-h2 {
-  font-size: 1.75rem;
-  color: #6c2bd9;
-  margin-bottom: 16px;
-}
-
-/* Footer */
-footer {
-  background: #000;
-  text-align: center;
-  padding: 16px 0;
-  border-top: 1px solid #333;
-  color: #777;
-  font-size: 0.875rem;
-}
-</style></head><body>
-<header><img src="images/logoCompany.png" alt="Logo" class="logo"><nav><a href="projects.html">Back to Projects</a></nav></header>
-<main><h1>Oracle Power & Logistics Hub</h1><p>10kWh battery, wireless/docked charging, 100kg payload capacity.</p><h2>Goals</h2><ul><li>48h operations</li><li>5km logistics</li><li>Renewable recharge</li><li>Data relay</li></ul></main><footer><p>&copy; 2025 Peterson’s Robotics & Innovation</p></footer></body></html>
+<html lang="en">
+<head><meta charset="UTF-8"><title>Oracle Power & Logistics Hub</title><link rel="stylesheet" href="css/styles.css"></head><body>
+<header><img src="images/logoCompany.png" alt="Company Logo" class="logo"><nav><a href="projects.html">Back to Projects</a></nav></header>
+<main><h1>Oracle Power & Logistics Hub</h1><p>10kWh battery, wireless/docked charging, 100kg payload.</p><h2>Goals</h2><ul><li>48h operations</li><li>5km logistics</li><li>Renewable recharge</li><li>Data relay</li></ul></main><footer><p>&copy; 2025 Peterson’s Robotics & Innovation</p></footer></body></html>
