--- a/supportTheProjectV1.html
+++ b/supportTheProjectV1.html
@@ -7,19 +7,23 @@
 </head>
 <body>
   <header>
-    <img src="images/logoCompany.png" alt="Company Logo" class="logo">
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="projects.html">Projects</a>
-      <a href="supportTheProjectV1.html" class="active">Support</a>
-    </nav>
-  </header>
+  <img src="images/logoCompany.png" alt="Company Logo" class="logo">
+  <nav><ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="about.html">About Us</a></li>
+  <li><a href="spyderV1.html">SpyderV1</a></li>
+  <li><a href="oracle.html">Oracle</a></li>
+  <li><a href="indigo.html">Indigo</a></li>
+  <li><a href="landSharks.html">Land Sharks</a></li>
+  <li><a href="zephyr.html">Zephyr</a></li>
+  <li><a href="supportTheProjectV1.html" class="active">Support</a></li>
+</ul></nav>
+</header>
   <main>
-    <h1>Support Our Mission</h1>
-    <p>Your contributions enable R&D, field tests, and open-source publishing. All proceeds reinvested.</p>
-    <a href="https://www.gofundme.com/f/fuel-the-future-help-build-spider-v1" class="button">Fuel the Future</a>
-  </main>
+  <h1>Support Our Mission</h1>
+  <p>Your contributions enable R&D, field tests, and open-source publishing. All proceeds are reinvested.</p>
+  <a href="https://www.gofundme.com/f/fuel-the-future-help-build-spider-v1" class="button">Fuel the Future</a>
+</main>
   <footer>
     <p>&copy; 2025 Peterson’s Robotics & Innovation</p>
   </footer>
