--- a/zephyr.html
+++ b/zephyr.html
@@ -7,32 +7,37 @@
 </head>
 <body>
   <header>
-    <img src="images/logoCompany.png" alt="Company Logo" class="logo">
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="zephyr.html" class="active">Zephyr</a>
-    </nav>
-  </header>
+  <img src="images/logoCompany.png" alt="Company Logo" class="logo">
+  <nav><ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="about.html">About Us</a></li>
+  <li><a href="spyderV1.html">SpyderV1</a></li>
+  <li><a href="oracle.html">Oracle</a></li>
+  <li><a href="indigo.html">Indigo</a></li>
+  <li><a href="landSharks.html">Land Sharks</a></li>
+  <li><a href="zephyr.html" class="active">Zephyr</a></li>
+  <li><a href="supportTheProjectV1.html">Support</a></li>
+</ul></nav>
+</header>
   <main>
-    <h1>Zephyr Aerial Delivery Drone</h1>
-    <p>Zephyr is our high-endurance aerial delivery drone built to transport critical supplies across challenging terrain. With a hybrid electric/solar powertrain, Zephyr achieves extended flight times for remote operations.</p>
-    <h2>Functionality</h2>
-    <ul>
-      <li><strong>Payload Capacity:</strong> Up to 5 kg of medical kits, tools, or samples.</li>
-      <li><strong>Flight Range:</strong> 20 km autonomous mission profile with GPS waypoint navigation.</li>
-      <li><strong>Endurance:</strong> Up to 2 hours on battery, extended with solar recharging panels.</li>
-      <li><strong>Sensors:</strong> Integrated GPS, LiDAR obstacle avoidance, RGB camera for precision delivery.</li>
-      <li><strong>Communication:</strong> Secure mesh-network link for real-time telemetry and control beyond line of sight.</li>
-    </ul>
-    <h2>Goals</h2>
-    <ul>
-      <li>Demonstrate reliable medical supply drops in remote locations.</li>
-      <li>Achieve semi-autonomous operation under dynamic environmental conditions.</li>
-      <li>Integrate with ground logistics platform (Oracle) for coordinated delivery.</li>
-      <li>Validate mid-air docking and battery swap for continuous operations.</li>
-    </ul>
-  </main>
+  <h1>Zephyr Aerial Delivery Drone</h1>
+  <p>High-endurance hybrid electric/solar drone for remote supply delivery.</p>
+  <h2>Functionality</h2>
+  <ul>
+    <li>5kg payload capacity</li>
+    <li>20km autonomous range</li>
+    <li>2h endurance, solar-extended</li>
+    <li>GPS and LiDAR obstacle avoidance</li>
+    <li>Secure mesh-network telemetry</li>
+  </ul>
+  <h2>Goals</h2>
+  <ul>
+    <li>Reliable remote medical supply drops</li>
+    <li>Semi-autonomous operation in dynamic environments</li>
+    <li>Integration with Oracle for seamless logistics</li>
+    <li>Mid-air battery swap demonstrations</li>
+  </ul>
+</main>
   <footer>
     <p>&copy; 2025 Peterson’s Robotics & Innovation</p>
   </footer>
