--- a/index.html
+++ b/index.html
@@ -7,38 +7,42 @@
 </head>
 <body>
   <header>
-    <img src="images/logoCompany.png" alt="Company Logo" class="logo">
-    <nav>
-      <a href="index.html" class="active">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="projects.html">Projects</a>
-      <a href="supportTheProjectV1.html">Support</a>
-    </nav>
-  </header>
+  <img src="images/logoCompany.png" alt="Company Logo" class="logo">
+  <nav><ul>
+  <li><a href="index.html" class="active">Home</a></li>
+  <li><a href="about.html">About Us</a></li>
+  <li><a href="spyderV1.html">SpyderV1</a></li>
+  <li><a href="oracle.html">Oracle</a></li>
+  <li><a href="indigo.html">Indigo</a></li>
+  <li><a href="landSharks.html">Land Sharks</a></li>
+  <li><a href="zephyr.html">Zephyr</a></li>
+  <li><a href="supportTheProjectV1.html">Support</a></li>
+</ul></nav>
+</header>
   <main>
-    <section id="hero">
-      <h1>Modular Robotics for Extreme Environments</h1>
-      <p>We build open-source robotic platforms powered by solar, wind, and battery—from rovers to crawlers to sea vessels.</p>
-      <a href="projects.html" class="button">Explore Project Evo</a>
-    </section>
-    <section id="cards">
-      <div class="card">
-        <h2>Our Story</h2>
-        <p>From a Salt Lake City garage to global field trials.</p>
-        <a href="about.html">Learn more</a>
-      </div>
-      <div class="card">
-        <h2>Project Evo</h2>
-        <p>Five interoperable modules tackling land, sea, and construction.</p>
-        <a href="projects.html">View modules</a>
-      </div>
-      <div class="card">
-        <h2>Support Us</h2>
-        <p>Fuel our prototypes, field tests, and open-source efforts.</p>
-        <a href="supportTheProjectV1.html">Get involved</a>
-      </div>
-    </section>
-  </main>
+  <section id="hero">
+    <h1>Modular Robotics for Extreme Environments</h1>
+    <p>We deliver professional-grade, open-source robotics solutions powered by renewable energy—built for land, sea, and air.</p>
+    <a href="projects.html" class="button">Explore Project Evo</a>
+  </section>
+  <section id="cards">
+    <div class="card">
+      <h2>Our Story</h2>
+      <p>From a Salt Lake City workshop to global field trials.</p>
+      <a href="about.html">Learn more</a>
+    </div>
+    <div class="card">
+      <h2>Project Evo</h2>
+      <p>Discover our modular robotics ecosystem.</p>
+      <a href="projects.html">View modules</a>
+    </div>
+    <div class="card">
+      <h2>Support Us</h2>
+      <p>Fuel our prototypes, field tests, and open-source efforts.</p>
+      <a href="supportTheProjectV1.html">Get involved</a>
+    </div>
+  </section>
+</main>
   <footer>
     <p>&copy; 2025 Peterson’s Robotics & Innovation</p>
   </footer>
