--- a/projects.html
+++ b/projects.html
@@ -7,24 +7,28 @@
 </head>
 <body>
   <header>
-    <img src="images/logoCompany.png" alt="Company Logo" class="logo">
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="projects.html" class="active">Projects</a>
-      <a href="supportTheProjectV1.html">Support</a>
-    </nav>
-  </header>
+  <img src="images/logoCompany.png" alt="Company Logo" class="logo">
+  <nav><ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="about.html">About Us</a></li>
+  <li><a href="spyderV1.html">SpyderV1</a></li>
+  <li><a href="oracle.html">Oracle</a></li>
+  <li><a href="indigo.html">Indigo</a></li>
+  <li><a href="landSharks.html">Land Sharks</a></li>
+  <li><a href="zephyr.html">Zephyr</a></li>
+  <li><a href="supportTheProjectV1.html">Support</a></li>
+</ul></nav>
+</header>
   <main>
-    <h1>Project Evo Modules</h1>
-    <ul>
-      <li><a href="spyderV1.html">SpyderV1 Recon Rover</a></li>
-      <li><a href="oracle.html">Oracle Power & Logistics Hub</a></li>
-      <li><a href="indigo.html">Indigo Sea Vessel</a></li>
-      <li><a href="landSharks.html">Land Sharks Amphibious Crawler</a></li>
-      <li><a href="zephyr.html">Zephyr Aerial Delivery Drone</a></li>
-    </ul>
-  </main>
+  <h1>Project Evo Modules</h1>
+  <ul>
+    <li><a href="spyderV1.html">SpyderV1 Recon Rover</a></li>
+    <li><a href="oracle.html">Oracle Power & Logistics Hub</a></li>
+    <li><a href="indigo.html">Indigo Sea Vessel</a></li>
+    <li><a href="landSharks.html">Land Sharks Amphibious Crawler</a></li>
+    <li><a href="zephyr.html">Zephyr Aerial Delivery Drone</a></li>
+  </ul>
+</main>
   <footer>
     <p>&copy; 2025 Peterson’s Robotics & Innovation</p>
   </footer>
